# powerpacks

./: .dockerignore  .flake8  .gitignore  .gitleaks.toml  .powerpacks  .release-please-manifest.json  AGENTS.md  AUDIT-LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HYGIENE.md  LICENSE  PROFILE.md  README.md  SECURITY.md  SUPPORT.md  compose.powerpacks.yml  install-powerset-mcp.sh  install.sh  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
app/: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
config/: codex-heartbeat.example.json  powerpacks-state-paths.json
contracts/: README.md
docs/: README.md  app-self-management-plan.md  codex-heartbeat-docker.md  expand-execute.md  index.html  pipeline-file-dag.md  postgres-contract.md  quickstart.md  release-please.md  search-surface.md  semantic-query-examples.md  skills-map.html  slice-planning.md  task-flow.md  task-harness.md  testing.md  turbopuffer-contract.md  verticals.md  vorflux-arthur-harness.md
evals/: run_company_search_harness.py  run_founder_recall_parity.py  run_recall_parity.py
mcp/: README.md
primitives/: README.md
schemas/: agentic-candidate-review-result.schema.json  candidate-review-plan.schema.json  company-search-filters.schema.json  decomposed-query.schema.json  filter-expression.schema.json  llm-filter-candidates.schema.json  role-search-filters.schema.json  search-slice.schema.json  search-strategy-decision.schema.json  task-run.schema.json
scripts/: adopt-powerpacks-state.py  run-skill-eval  (+26 more)
(+994 files in other folders)
